--- a/FFN_adding_machine.ipynb
+++ b/FFN_adding_machine.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wk/cgsrf1m50qx268ccx7b33rdr0000gn/T/ipykernel_30808/762136488.py:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "  display.set_matplotlib_formats('svg')\n"
+     ]
+    }
+   ],
    "source": [
     "# Load libraries / packages / functions\n",
     "import numpy as np\n",
@@ -28,36 +37,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load externally defined functions / classes\n",
-    "%run create_data\n",
-    "%run create_model\n",
-    "%run train_model"
+    "from create_data import create_data\n",
+    "#%run create_model\n",
+    "#%run train_model\n",
+    "%run create_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 2,  3, -7, -6,  8,  9,  9, -3, -2, -1]),\n",
-       " array([-10,  -6,   5,   6,  -6]),\n",
-       " array([ 1, -7, -7,  5, -4]))"
+       "array([[ -7,  -8],\n",
+       "       [ -5,  -8],\n",
+       "       [ -5,  -2],\n",
+       "       [  8,   9],\n",
+       "       [  5,  -3],\n",
+       "       [  2,   5],\n",
+       "       [-10,   7],\n",
+       "       [  9,   6],\n",
+       "       [  0,   4],\n",
+       "       [  7,  -5]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "create_data(10)"
+    "train_data, test_data, holdout_data = create_data(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-15],\n",
+       "       [-13],\n",
+       "       [ -7],\n",
+       "       [ 17],\n",
+       "       [  2],\n",
+       "       [  7],\n",
+       "       [ -3],\n",
+       "       [ 15],\n",
+       "       [  4],\n",
+       "       [  2]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -7,  -8],\n",
+       "       [ -5,  -8],\n",
+       "       [ -5,  -2],\n",
+       "       [  8,   9],\n",
+       "       [  5,  -3],\n",
+       "       [  2,   5],\n",
+       "       [-10,   7],\n",
+       "       [  9,   6],\n",
+       "       [  0,   4],\n",
+       "       [  7,  -5]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "holdout_data"
    ]
   }
  ],
