Done with the dataloaders next step: FFN

--- a/FFN_adding_machine.ipynb
+++ b/FFN_adding_machine.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wk/cgsrf1m50qx268ccx7b33rdr0000gn/T/ipykernel_30808/762136488.py:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/var/folders/wk/cgsrf1m50qx268ccx7b33rdr0000gn/T/ipykernel_3782/2217786551.py:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  display.set_matplotlib_formats('svg')\n"
      ]
     }
@@ -32,107 +32,82 @@
     "\n",
     "# Change the graphics settings to display vector graphics for prettier outputs\n",
     "from IPython import display\n",
-    "display.set_matplotlib_formats('svg')"
+    "display.set_matplotlib_formats('svg')\n",
+    "\n",
+    "# Self-defined functions in python scripts in this project\n",
+    "from create_data import create_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load externally defined functions / classes\n",
-    "from create_data import create_data\n",
-    "#%run create_model\n",
-    "#%run train_model\n",
-    "%run create_data"
+    "# Create train, test, and holdout data (numpy arrays)\n",
+    "training, testing, holdout = create_data(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ -7,  -8],\n",
-       "       [ -5,  -8],\n",
-       "       [ -5,  -2],\n",
-       "       [  8,   9],\n",
-       "       [  5,  -3],\n",
-       "       [  2,   5],\n",
-       "       [-10,   7],\n",
-       "       [  9,   6],\n",
-       "       [  0,   4],\n",
-       "       [  7,  -5]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_data, test_data, holdout_data = create_data(10)\n"
+    "# Turn the datasets into torch.Tensors and TensorDatasets\n",
+    "## Normalize all the predictors across train, test, holdout by the same value\n",
+    "## Training data\n",
+    "train_labels = torch.Tensor(training[:, 2])[:, None].float()\n",
+    "train_data = torch.Tensor(training[:, :2] / 10).float()\n",
+    "train_set = TensorDataset(train_data, train_labels)\n",
+    "\n",
+    "## Testing data\n",
+    "test_labels = torch.Tensor(testing[:, 2])[:, None].float()\n",
+    "test_data = torch.Tensor(testing[:, :2] / 10).float()\n",
+    "test_set = TensorDataset(test_data, test_data)\n",
+    "\n",
+    "## Holdout data\n",
+    "holdout_labels = torch.Tensor(holdout[:, 2])[:, None].float()\n",
+    "holdout_data = torch.Tensor(holdout[:, :2] / 10).float()\n",
+    "holdout_set = TensorDataset(holdout_data, holdout_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-15],\n",
-       "       [-13],\n",
-       "       [ -7],\n",
-       "       [ 17],\n",
-       "       [  2],\n",
-       "       [  7],\n",
-       "       [ -3],\n",
-       "       [ 15],\n",
-       "       [  4],\n",
-       "       [  2]])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_data"
+    "# Set some important metaparameters here in one go\n",
+    "BATCHSIZE = 16"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ -7,  -8],\n",
-       "       [ -5,  -8],\n",
-       "       [ -5,  -2],\n",
-       "       [  8,   9],\n",
-       "       [  5,  -3],\n",
-       "       [  2,   5],\n",
-       "       [-10,   7],\n",
-       "       [  9,   6],\n",
-       "       [  0,   4],\n",
-       "       [  7,  -5]])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 3 batches in the train_loader, each with 16 samples.\n"
+     ]
     }
    ],
    "source": [
-    "test_data"
+    "# Create DataLoaders\n",
+    "train_loader = DataLoader(train_set,\n",
+    "                          batch_size=BATCHSIZE,\n",
+    "                          drop_last=True,\n",
+    "                          shuffle=True)\n",
+    "test_loader = DataLoader(test_set,\n",
+    "                         batch_size=test_set.tensors[0].shape[0])\n",
+    "holdout_loader = DataLoader(holdout_set,\n",
+    "                            batch_size=holdout_set.tensors[0].shape[0])\n",
+    "\n",
+    "# Return some information on the training DataLoader\n",
+    "print(f'There are {len(train_loader)} batches in the train_loader, each with {BATCHSIZE} samples.')"
    ]
   },
   {
@@ -140,9 +115,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "holdout_data"
-   ]
+   "source": []
   }
  ],
  "metadata": {
