Working on the individual scripts

--- a/FFN_adding_machine.ipynb
+++ b/FFN_adding_machine.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wk/cgsrf1m50qx268ccx7b33rdr0000gn/T/ipykernel_3782/2217786551.py:11: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/var/folders/wk/cgsrf1m50qx268ccx7b33rdr0000gn/T/ipykernel_10429/590215211.py:8: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  display.set_matplotlib_formats('svg')\n"
      ]
     }
@@ -25,9 +25,6 @@
     "# Load libraries / packages / functions\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "# Change the graphics settings to display vector graphics for prettier outputs\n",
@@ -35,12 +32,16 @@
     "display.set_matplotlib_formats('svg')\n",
     "\n",
     "# Self-defined functions in python scripts in this project\n",
-    "from create_data import create_data"
+    "# (some imports are likely to be redundant)\n",
+    "from create_data import create_data\n",
+    "from FFNAddingMachine import FFNAddingMachine\n",
+    "from initiate_model import initiate_model\n",
+    "from train_model import train_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 3 batches in the train_loader, each with 16 samples.\n"
+      "There are 3 batches in the train_loader, each with     16 samples.\n"
      ]
     }
    ],
@@ -107,15 +108,80 @@
     "                            batch_size=holdout_set.tensors[0].shape[0])\n",
     "\n",
     "# Return some information on the training DataLoader\n",
-    "print(f'There are {len(train_loader)} batches in the train_loader, each with {BATCHSIZE} samples.')"
+    "print(f'There are {len(train_loader)} batches in the train_loader, each with \\\n",
+    "    {BATCHSIZE} samples.')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the input: \n",
+      "tensor([-0.2000, -0.1000])\n",
+      "This is the output: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.2377], grad_fn=<SelectBackward0>)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a model instance and test it\n",
+    "test_instance = FFNAddingMachine()\n",
+    "X, y = next(iter(train_loader))\n",
+    "print(\"This is the input: \")\n",
+    "print(X[0])\n",
+    "print(\"This is the output: \")\n",
+    "test_instance(X)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Adam (\n",
+       "Parameter Group 0\n",
+       "    amsgrad: False\n",
+       "    betas: (0.9, 0.999)\n",
+       "    eps: 1e-08\n",
+       "    lr: 0.001\n",
+       "    weight_decay: 0\n",
+       ")"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimizer"
+   ]
   }
  ],
  "metadata": {
